<resources>
    <string name="app_name">Foogles</string>
    <string name="Edit_Farm_Name">Edit</string>
    <string name="Farm_Name">FoogleFarm 64</string>
    <string name="Training_Button">Train</string>
    <string name="Walk_Game">Walk-a-Foogle</string>
    <string name="Marketplace_Button">Marketplace</string>
    <string name="Edit_Foogle_Button">Edit Foogle</string>
    <string name="Tournament_Button">Fooglympics</string>
    <string name="Confirm_Button">Confirm</string>
    <string name="Foogle_Fhrase_1">Foogtacular!</string>
    <string name="Main_Menu">Back to Main</string>
    <string name="Okay_Button">Okay...</string>
    <string name="Walk_Options">Walk Options</string>
    <string name="Prompt_Where">Where would you like to walk to?</string>
    <string name="Prompt_When">When would you like to leave?</string>
    <string name="Prompt_Pet">Would you like to pet your Foogle?</string>

    <string name="Title">Game Select</string>
    <string name="Foogle_Climb">Foogle Climb</string>
    <string name="Foogle_Fish">Foogle Fish</string>
    <string name="Foogle_Hop">Foogle Hop</string>
    <string name="Foogle_Swim">Foogle Swim</string>
    <string name="Foogle_Whack">Whack-a-Foogle</string>
    <string name="Exit">Exit</string>
    <string name="Little_League">Little League</string>
    <string name="Big_League">Big League</string>
    <string name="Really_Big_League">Really Big League</string>
    <string name="Name">Enter a Name</string>
    <string name="Save">Save</string>
    <string name="Go_Walk">Let\'s Go!</string>

    <string-array name="Foogle_Names">
        <item>FoogMan</item>
        <item>Chuck</item>
        <item>RadishThing</item>
        <item>HowDidIEvenGetHere?</item>
    </string-array>

    <string-array name="Foogle_Faces">
        <item>( ͡° ͜ʖ ͡°)</item>
        <item>(⊙︿⊙✿)</item>
        <item>¯\_(ツ)_/¯</item>
        <item>(づ｡◕‿‿◕｡)づ</item>
        <item>ಥ_ಥ</item>
    </string-array>

    <string-array name="Walk_Locations">
        <item>Ocean</item>
        <item>Desert</item>
        <item>Beach</item>
        <item>Forest</item>
    </string-array>

    <string-array name="Walk_Times">
        <item>Morning</item>
        <item>Midday</item>
        <item>Late</item>
        <item>Now!</item>
    </string-array>

    <string-array name="Pet_Options">
        <item>Yes</item>
        <item>YES</item>
        <item>MORE YES!</item>
        <item>WHY WOULD YOU LOOK FOR ANYTHING ELSE?!</item>
    </string-array>


    <string-array name="Colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
    </string-array>

    <string-array name="Costumes">
        <item>None</item>
        <item>Kung Foogle</item>
        <item>IT Foogle</item>
        <item>Flower Pot Foogle</item>
        <item>FoogleMan</item>
    </string-array>

    <string-array name="Misc">
        <item>None</item>
        <item>Hat</item>
        <item>Scarf</item>
        <item>Glasses</item>
        <item>Mustache</item>
    </string-array>

    <string name="title_activity_foogle_fish">foogle_fish</string>
    <string name="Whack">Whack!</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Jump">Jump</string>
    <string name="Catch">Catch</string>
    <string name="View_Switch">New View</string>
    <string name="Add_Foogle">Create Foogle!</string>
    <string name="Trophies_Button">Trophies!</string>
    <string name="todo">TODO</string>
    <string name="add_string">AddString</string>
    <string name="find_string">FindString</string>
    <string name="delete_string">DeleteString</string>
    <string name="Start">Start</string>
    <string name="Score">Score:</string>
    <string name="description">Description</string>
    <string name="GoToRewards">Go To Rewards</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="start">Start</string>
    <string name="YouCaughtA">You caught a</string>
    <string name="YouCaughtAn">You caught an</string>
    <string name="SHorseText">Sea Horse</string>
    <string name="BarredText">Barred Knifejaw</string>
    <string name="OctopusText">Octopus</string>
    <string name="AnglerText">Angler Fish</string>
    <string name="SharkText">Shark</string>
    <string name="close">Close</string>

</resources>
