<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fooglesinc.foogles.GameSelect">

    <EditText
        android:id="@+id/Title"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="27dp"
        android:focusable="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="text|textPersonName"
        android:text="@string/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="99dp"
        android:layout_marginLeft="98dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:onClick="sendMessage"
        android:text="@string/Foogle_Climb"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/Foogle_Fish"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button3"
        tools:layout_editor_absoluteY="174dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/Foogle_Swim"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button9"
        tools:layout_editor_absoluteY="315dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Foogle_Whack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button6"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="307dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="427dp"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        android:layout_marginRight="307dp"
        android:layout_marginLeft="64dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Foogle_Hop"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        tools:layout_editor_absoluteY="241dp"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
