<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fooglesinc.foogles.Tournament">

    <Button
        android:id="@+id/button"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="279dp"
        android:text="@string/Little_League"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="76dp"
        android:layout_marginLeft="78dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="24dp"
        android:text="@string/Big_League"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="82dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginBottom="125dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:text="@string/Really_Big_League"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="84dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="295dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        android:layout_marginRight="295dp"
        android:layout_marginLeft="28dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="379dp"
        android:layout_height="198dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_trophy_foreground" />


</android.support.constraint.ConstraintLayout>
