<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fooglesinc.foogles.CreateFoogle">

    <TextView
        android:id="@+id/EditNameTitle"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Add_Foogle"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FoogleName"
        android:layout_width="365dp"
        android:layout_height="33dp"
        android:layout_marginEnd="271dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="26dp"
        android:text="Name Your Foogle!"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditNameTitle" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="185dp"
        android:layout_height="51dp"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="355dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="165dp"
        android:onClick="backToMain"
        android:text="@string/Confirm_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/FoogleEnergy" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginEnd="299dp"
        android:layout_marginStart="319dp"
        android:layout_marginTop="30dp"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="Set Name Here"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoogleName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="228dp"
        android:onClick="newProduct"
        android:text="@string/add_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:onClick="lookupProduct"
        android:text="@string/find_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="removeProduct"
        android:text="@string/delete_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/FoogleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="I have no idea what this does"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/FoogleEnergy"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <EditText
        android:id="@+id/FoogleEnergy"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="100dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/EditName"
        tools:text="Place desired ID" />


</android.support.constraint.ConstraintLayout>
